# bonsol-calculator

./: .gitignore  .gitmodules  Cargo.toml  DEMO_RESULTS.md  DEPLOYMENT_GUIDE.md  LICENSE  README.md  deploy.sh  quick-test.sh  test-execution.js
calculator-api/: package-lock.json  package.json  server.js
client/: Cargo.toml  README.md
client/src/: main.rs
frontend/: calculator-client.ts  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: BonsolCalculatorApp.tsx  CalculatorApp.tsx  SimpleCalculator.tsx  bonsol-api-client.ts  bonsol-client.ts  index.tsx
frontend/src/schemas-ts/: package.json  tsconfig.json
local-server/: zk_calculator-5881e972d41fe651c2989c65699528da8b1ed68ab7057350a686b8a64a00fc91
simple-frontend/: index.html
solana-program/: Cargo.toml
solana-program/src/: lib.rs
test-client/: Cargo.toml
test-client/src/: main.rs
zk-program/: Cargo.toml  README.md  execution-request.json  inputs.json  manifest.json
zk-program/src/: main.rs
