[package]
name = "bonsol-calculator-client"
version = "0.1.0"
edition = "2021"

[workspace]
# Empty workspace to make this a standalone package

[dependencies]
solana-sdk = "~2.0"
solana-client = "~2.0"
solana-program = "~2.0"
borsh = "0.10.3"
tokio = { version = "1", features = ["full"] }
bonsol-interface = { path = "../bonsol/onchain/interface" }
sha2 = "0.10.8"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
hex = "0.4"
urlencoding = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" 
