[package]
name = "bonsol-calculator-backend"
version = "0.1.0"
edition = "2021"
description = "Simple calculator backend for testing"

[workspace]
# Empty workspace to make this a standalone package

[dependencies]
solana-program = "~2.0"
borsh = "0.10.3"
bonsol-interface = { path = "../bonsol/onchain/interface" }

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = []
no-entrypoint = [] 
